# ParticleModel

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
code/: Makefile  advection.f90  common_modules.f90  datetime.f90  diffusion.f90  domain.f90  field.f90  fieldset.f90  init.f90  interp.f90  kernel.f90  list.f90  loop.f90  main.f90  module_template.f90  nc_manager.f90  output.f90  particle.f90  particle_vars.f90  particleset.f90  physics.f90  postprocessing.f90  precdefs.f90  process.f90  random.f90  simulation.f90  solver.f90  statevector.f90  this_will_be_particleset.f90  timer.f90  utils.f90  variable.f90  vars.f90  vector.f90  vertical_motion.f90
code/biofouling/chl_proxy/: biofouling_chl.f90
code/biofouling/simple/: biofouling_simple.f90
code/postprocessing/: accumulator.f90  measure.f90  postprocessing.f90  snapshot.f90
code/postprocessing_vectorized/: accumulator.f90  measure.f90  postprocessing.f90  snapshot.f90
code_dev/: Makefile  advection.f90  diffusion.f90  domain.f90  fieldset.f90  init.f90  kernel.f90  list.f90  output.f90  particle.f90  particleset.f90  physics.f90  simulation.f90  solver.f90  statevector.f90
code_dev/biofouling/simple/: biofouling_simple_funcs.f90
include/: cppdefs.h  field.h  ompdefs.h  output.h
nml/: nmltemplate_biofouling_chl_proxy  nmltemplate_general
scripts/run/: run  run_restart
test_cases/: README.md
test_cases/CMEMS_NW_Atlantic_2d/: calculate_counts.py  run
test_cases/Tagus_3d/: calculate_counts.py  run
test_cases/eddy/: plot_trajectory.py  run
test_cases/gof_250m_3d/: README.md  calculate_counts.py  run
test_cases/gof_250m_3d/data/input/: make_init_particles.py
